# composer_mirror

./: Cargo.toml  README.md  log.txt  packages.json
src/: dist.rs  main.rs  package.rs  request_helper.rs
src/mirrors/: aliyun.rs  mirror.rs  mod.rs  packagist.rs  tencent.rs
src/mirrors/packagist/packagist_strategy/: cache_third_site.rs  mod.rs  storage_self.rs
