[package]
name = "composer_mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = { version = "0.11.20", features = ["stream", "json"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
glob = "0.3.0"
async-trait = "0.1.73"
serde_json = "1.0.106"
qiniu-sdk = { version = "0.2.3",  features = ["upload", "async", "reqwest"] }
futures = "0.3.28"
dotenv = "0.15.0"
